--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -23,10 +23,6 @@
 	margin-left: 15px;
 }
 
-/* TODO make badges smaller and align them with icons
-.iconBadge {
-
-}*/
 
 .navbar-icons {
 	margin-top: 2px;
@@ -103,19 +99,6 @@
     float: right;
 }
 
-/* TODO hide second level */
-/*.sidebar .nav-second-level {
-	position: absolute;
-    top: 0;
-    visibility: hidden;
-    margin-top: -1px;
-}
-
-.sidebar li:hover .nav-second-level {
-	visibility: visible;
-	display: block;
-}*/
-
 .sidebar .nav-second-level li{
     border-bottom: 0!important;
 }
@@ -167,12 +150,13 @@
 	color: #d3d3d3
 }
 
-.ticket-rightside{
-	float: right;
+.ticket-leftside {
+	width: 70%;
+	display: inline-block;
 }
 
-.ticket-assignedTo {
-	/* TODO naredi poravnavo */
+.ticket-rightside{
+	display: inline-block;		
 }
 
 .ticket-status-closed {
@@ -195,10 +179,7 @@
 	color: #FFD700;
 }
 
-.progress-bar {
-	/* TODO make progress bar smaller */
-}
-
-.faq {
-	font-size: 55% !important;
+.progress {
+	margin-left: 25%;
+	margin-right: 25%;
 }
