--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,5 @@
 body {
-    background: url('../res/background/login_background2.jpg') no-repeat fixed center center;
+    background: url('../res/background/login_background1.jpg') no-repeat fixed center center;
     background-size: cover;
     font-family: Montserrat;
 }
@@ -17,8 +17,9 @@ body {
     padding: 20px;
     background: #fff;
     border-radius: 5px;
-    border-top: 5px solid #ff656c;
+    border-top: 5px solid #0033cc;
     margin: 0 auto;
+    opacity: 0.77;
 }
 
 .login-block h1 {
@@ -65,16 +66,16 @@ body {
 }
 
 .login-block input:active, .login-block input:focus {
-    border: 1px solid #ff656c;
+    border: 1px solid #0039e6;
 }
 
 .login-block button {
     width: 100%;
     height: 40px;
-    background: #ff656c;
+    background: #0039e6;
     box-sizing: border-box;
     border-radius: 5px;
-    border: 1px solid #e15960;
+    border: 1px solid #0033cc;
     color: #fff;
     font-weight: bold;
     text-transform: uppercase;
@@ -82,19 +83,11 @@ body {
     font-family: Montserrat;
     outline: none;
     cursor: pointer;
+    margin-top: 40px;
 }
 
 .login-block button:hover {
-    background: #ff7b81;
-}
-
-.login-block input#rememberMe {
-    display:inline-block;
-    width:19px;
-    height:19px;
-    margin:10px 4px 0 0;
-    vertical-align:middle;
-    cursor:pointer;
+    background: #4d79ff;
 }
 
 footer
@@ -106,14 +99,3 @@ footer
 	text-align: center;
 }
 
-@font-face {
-    font-family: Montserrat;
-    src: url('../res/fonts/Montserrat.tff');
-    font-weight: bold;
-}
-
-
-@font-face {
-    font-family: Silent Reaction;
-    src:   url("../res/fonts/Silent Reaction.tff")
-}
