--- a/css/login.css
+++ b/css/login.css
@@ -1,15 +1,16 @@
 body {
     background: url('../res/background/login_background1.jpg') no-repeat fixed center center;
     background-size: cover;
-    font-family: Montserrat;
 }
 
 .company_logo {
-    width: 213px;
+    width: 600px;
     height: 36px;
     text-align: center;
-    font-family: SilentReaction;
+    font-family:'Rancho', cursive;
+    font-size: 50px;
     margin: 30px auto;
+    margin-top: 50px
 }
 
 .login-block {
@@ -19,6 +20,7 @@ body {
     border-radius: 5px;
     border-top: 5px solid #0033cc;
     margin: 0 auto;
+    margin-top: 100px;
     opacity: 0.77;
 }
 
@@ -39,7 +41,6 @@ body {
     border: 1px solid #ccc;
     margin-bottom: 20px;
     font-size: 14px;
-    font-family: Montserrat;
     padding: 0 20px 0 50px;
     outline: none;
 }
@@ -80,7 +81,6 @@ body {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 14px;
-    font-family: Montserrat;
     outline: none;
     cursor: pointer;
     margin-top: 40px;
@@ -99,3 +99,6 @@ footer
 	text-align: center;
 }
 
+.login-font{
+    font-family: 'Poiret One', cursive;
+}
